finalize the webpage with map legend. add a few more visuals

--- a/test.html
+++ b/test.html
@@ -7,6 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>US University Statistics (latest)</title>
   <link rel="stylesheet" type="text/css" href="static/css/style.css">
+  <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
@@ -69,7 +71,7 @@
           integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
           crossorigin=""></script>
         <!-- Our JavaScript -->
-        <script type="text/javascript" src="static/js/logic.js"></script>
+        <script type="text/javascript" src="static/js/logic_old.js"></script>
       </div>
     </div>
   </div>
