Adding a few screenshots for presentations and fixing error in logic_old.js

--- a/test.html
+++ b/test.html
@@ -63,6 +63,7 @@
         </style>
         <h2>Map of US Universities Based Attendance of Selected Ethnicity</h1>
         <p>Select an option from the menu to the right.</p>
+        <p>Note that values of 0 could also be undefined.</p>
         <div id="map" style="height: 500px; width: 1300px;"></div>
         
 
